# kdev-clang

./: CMakeLists.txt  README  clangparsejob.cpp  clangsupport.cpp  clangsupport.h
bar/: CMakeLists.txt
cmake/: FindClang.cmake
crash/: CMakeLists.txt
refactoring/: CMakeLists.txt  actionwatcher.cpp  actionwatcher.h  changesignaturedialog.cpp  changesignaturedialog.h  changesignaturedialog.ui  changesignaturerefactoring.cpp  changesignaturerefactoring.h  changesignaturerefactoringchangepack.cpp  changesignaturerefactoringchangepack.h  changesignaturerefactoringinfopack.cpp  changesignaturerefactoringinfopack.h  contextmenumutator.cpp  contextmenumutator.h  debug.cpp  debug.h  declarationcomparator.cpp  declarationcomparator.h  declarationsymbol.cpp  declarationsymbol.h  documentcache.cpp  documentcache.h  encapsulatefielddialog.cpp  encapsulatefielddialog.h  encapsulatefielddialog.ui  encapsulatefieldrefactoring.cpp  encapsulatefieldrefactoring.h  encapsulatefieldrefactoring_changepack.cpp  encapsulatefieldrefactoring_changepack.h  extractfunctionrefactoring.cpp  extractfunctionrefactoring.h  extractvariablerefactoring.cpp  extractvariablerefactoring.h  instancetostaticrefactoring.cpp  instancetostaticrefactoring.h  interface.cpp  interface.h  kdevrefactorings.cpp  kdevrefactorings.h  kdevrefactorings_disabled.h  (+28 more)
tests/: CMakeLists.txt  refactoringenvironment.cpp  refactoringenvironment.h  test_duchain.cpp  test_encapsulatefield.cpp  test_encapsulatefield.h  test_extractfunction.cpp  test_extractfunction.h  test_extractvariable.cpp  test_extractvariable.h  test_instancetostatic.cpp  test_instancetostatic.h  test_movefunction.cpp  test_movefunction.h  test_refactoringmanager.cpp  test_refactoringmanager.h  test_renamevar.cpp  test_renamevar.h
